NN-3890 adding offender victims to the update